# python-project-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
project_name/: main.py
