[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"
description = ""
version = "1.0.0"
readme = "README.md"
#authors = [
#  {name = "", email = ""},
#]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
]

[project.urls]
#Repository = "https://github.com/AUTHOR/REPO"
#Issues = "https://github.com/AUTHOR/REPO/issues"

#[project.scripts]
#command_name = "module.path:function"

# For single file project
#[tool.setuptools]
#py-modules = ["file_name"]
